feat: Complete React TypeScript rewrite with geohash-based room system
- Complete rewrite from vanilla HTML/CSS/JS to React 18 + TypeScript
- Implemented geohash-based room system (one room per geohash)
- Added interactive Leaflet map with geohash grid overlays
- Integrated Firebase Auth, Firestore, and Hosting
- Created real-time chat interface with anonymous authentication
- Added location-based room discovery and joining
- Implemented responsive design with CSS Modules
- Added comprehensive documentation in docs/ folder
- Cleaned up codebase and removed obsolete files
- Fixed geohash popup functionality and room creation flow

Technical improvements:
- Vite build system for fast development
- TypeScript for type safety
- React hooks for state management
- Firebase real-time synchronization
- Geospatial utilities for geohash calculations
- Modern component architecture

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,23 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+bun.lockb
+
+# TypeScript
+*.tsbuildinfo
+tsconfig.tsbuildinfo
+
+# Vite
+.vite/
 
 # Firebase
 .firebase/
 firebase-debug.log
 firebase-debug.*.log
 .firebaserc
+firebase-export-*/
+firestore-export-*/
 
 # Environment variables
 .env
@@ -20,9 +31,11 @@ firebase-debug.*.log
 # IDE and Editor files
 .vscode/
 .idea/
+*.code-workspace
 *.swp
 *.swo
 *~
+.#*
 
 # OS generated files
 .DS_Store
@@ -76,8 +89,36 @@ test-results/
 *.test.js
 test_*.html
 test_*.js
+playwright-report/
+playwright/.cache/
+cypress/videos/
+cypress/screenshots/
 
 # Cache
 .cache/
+
+# Bundle analysis & Performance
+bundle-report.html
+stats.json
+lighthouse-report.html
+
+# Backup files
+*.backup
+*.bak
+*.tmp
+*.temp
+
+# Local config overrides
+config.local.js
+firebase.local.json
+secrets.json
+
+# Map cache (if implementing offline maps)
+map-cache/
+tiles-cache/
+
+# Deployment
+.vercel/
+.netlify/
 
 .cursor/
